cmake_minimum_required(VERSION 3.8)
project(my_cpp_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(example_interfaces REQUIRED)

add_executable(
  cpp_node
  src/my_first_node.cpp
)

add_executable(
  robot_news_station
  src/robot_news_station.cpp
)

add_executable(
  smartphone
  src/smartphone.cpp
)

add_executable(
  number_publisher
  src/number_publisher.cpp
)

add_executable(
  number_counter
  src/number_counter.cpp
)

ament_target_dependencies(
  number_counter
  example_interfaces
  rclcpp

)

ament_target_dependencies(
  number_publisher
  example_interfaces
  rclcpp

)
ament_target_dependencies(
  robot_news_station
  example_interfaces
  rclcpp
)
ament_target_dependencies(
  smartphone
  example_interfaces
  rclcpp
)

ament_target_dependencies(
  cpp_node
  rclcpp
)

install( TARGETS 
  cpp_node
  robot_news_station
  smartphone
  number_publisher
  number_counter
  DESTINATION lib/${PROJECT_NAME})

ament_package()
